Fix number display having weird spacing between text and border of element

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   border: 1px solid gray;
   font-size: 48px;
   text-align: right;
+  padding: 0px 10px;
 }
 
 #calculator-buttons {
